--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,8 +27,10 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/qrcode.js/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+
     <script src="js/qrFunctions.js"></script>
+
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
